# telegnome

./: .gitignore  .gitlab-ci.yml  AUTHORS  BUGS  ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  TODO  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  mkinstalldirs  telegnome.appdata.xml.in  telegnome.desktop  telegnome.desktop.in  telegnome.doap
data/: .gitignore  Makefile.am  org.gnome.telegnome.gschema.xml
doc/: .gitignore  Makefile.am  telegnome.1  telegnome.omf.in
doc/C/: Makefile.am  index.docbook  telegnome.sgml
doc/C/telegnome/: ln26.html  telegnome.html  ui.html  users-manual.html  using.html
doc/cs/: cs.po
doc/da/: da.po
doc/de/: .gitignore  de.po
doc/el/: el.po
doc/es/: es.po
doc/fr/: fr.po
doc/hu/: hu.po
doc/pl/: pl.po
doc/pt_BR/: pt_BR.po
doc/ro/: ro.po
doc/sl/: sl.po
doc/sv/: sv.po
doc/uk/: uk.po
doc/zh_CN/: zh_CN.po
macros/: Makefile.am  Makefile.in  autogen.sh  gnome-ghttp-check.m4  gnome-x-checks.m4  macros.dep
pixmaps/: Makefile.am  Makefile.in
po/: .gitignore  ChangeLog  LINGUAS  Makevars  POTFILES.in  az.po  bg.po  bs.po  ca.po  cat-id-tbl.c  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fr.po  fur.po  gl.po  he.po  hi.po  hu.po  id.po  it.gmo  it.po  ka.po  kk.po  lv.po  nb.po  nl.gmo  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.gmo  ru.po  (+10 more)
src/: .gitignore  Makefile.am  Makefile.in  app.c  app.h  app.vala  channel.c  channel.h  channel.vala  default-channels.cfg  gui.c  gui.h  gui.vala  http.c  http.h  http.vala  legacy-config.c  legacy-config.h  legacy-config.vala  main.c  main.h  main.vala  menu.h  menu.xml  menus.ui  paths.c.in  paths.h  paths.vala.in  paths.vapi  pixpack.c  pixpack.h  pixpack.vala  prefs.c  prefs.h  prefs.ui  prefs.vala  telegnome.gresource.xml  telegnome.ui  uuid.vapi  view.c  (+1 more)
