AC_INIT
AC_PREREQ(2.50)
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_MACRO_DIR([m4])

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(telegnome, 0.1.2)

AM_MAINTAINER_MODE

GNOME_COMMON_INIT
GNOME_DEBUG_CHECK
GNOME_COMPILE_WARNINGS([maximum])
GNOME_DOC_INIT
GLIB_GSETTINGS

AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CPP
AC_HEADER_STDC
AC_PROG_INSTALL

AC_DEFINE_UNQUOTED([SYSCONFDIR], "$sysconfdir", [System configuration directory.])

PKG_CHECK_MODULES([TELEGNOME], [glib-2.0 >= 2.34 gobject-2.0 >= 2.44 gtk+-2.0 >= 2.20 gdk-pixbuf-2.0 libgnomeui-2.0 gio-2.0 dconf uuid])

PROGRAMS_TELEGNOME="telegnome"
AC_SUBST(PROGRAMS_TELEGNOME)

GETTEXT_PACKAGE=telegnome
AC_SUBST([GETTEXT_PACKAGE])
AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE], ["$GETTEXT_PACKAGE"], [Gettext Package])
AM_GLIB_GNU_GETTEXT
AM_GLIB_DEFINE_LOCALEDIR([GNOMELOCALEDIR])
IT_PROG_INTLTOOL([0.35.0], [no-xml])

AC_CONFIG_FILES([Makefile 
	   data/Makefile
	   pixmaps/Makefile 
	   src/Makefile
	   po/Makefile.in
	   doc/Makefile
	 ])
AC_OUTPUT
