AC_INIT(src/main.c)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(telegnome, 0.0.10)

AM_MAINTAINER_MODE

AM_ACLOCAL_INCLUDE(macros)

GNOME_INIT

AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CPP
AC_STDC_HEADERS
AC_PROG_INSTALL

GNOME_X_CHECKS
GNOME_GHTTP_CHECK

PROGRAMS_TELEGNOME="telegnome"
AC_SUBST(PROGRAMS_TELEGNOME)

ALL_LINGUAS="nl ru sv it"
AM_GNU_GETTEXT
localedir='${prefix}/${DATADIRNAME}/locale'
AC_SUBST(localedir)

AC_OUTPUT([Makefile 
	   pixmaps/Makefile 
	   src/Makefile
	   macros/Makefile 
	   intl/Makefile  
	   po/Makefile.in
	   doc/Makefile
	   doc/C/Makefile
	 ])



