AC_INIT
AC_PREREQ(2.50)
AC_CONFIG_SRCDIR([src/main.c])

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(telegnome, 0.0.10)

AM_MAINTAINER_MODE

AM_ACLOCAL_INCLUDE(macros m4)

GNOME_INIT

AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CPP
AC_HEADER_STDC
AC_PROG_INSTALL

GNOME_X_CHECKS
GNOME_GHTTP_CHECK

PROGRAMS_TELEGNOME="telegnome"
AC_SUBST(PROGRAMS_TELEGNOME)

ALL_LINGUAS="az fr it nl ru sv zh_CN"
AM_GNU_GETTEXT([external])
localedir='${prefix}/${DATADIRNAME}/locale'
AC_SUBST(localedir)

AC_CONFIG_FILES([Makefile 
	   pixmaps/Makefile 
	   src/Makefile
	   macros/Makefile 
	   po/Makefile.in
	   doc/Makefile
	   doc/C/Makefile
	 ])
AC_OUTPUT
