AC_INIT
AC_PREREQ(2.50)
AC_CONFIG_SRCDIR([src/main.c])

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(telegnome, 0.0.10)

AM_MAINTAINER_MODE

GNOME_COMMON_INIT
GNOME_DEBUG_CHECK
GNOME_COMPILE_WARNINGS([maximum])

AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CPP
AC_HEADER_STDC
AC_PROG_INSTALL

PKG_CHECK_MODULES([TELEGNOME], [glib-2.0 libgnomeui-2.0])
GNOME_GHTTP_CHECK

PROGRAMS_TELEGNOME="telegnome"
AC_SUBST(PROGRAMS_TELEGNOME)

ALL_LINGUAS="az fr it nl ru sv zh_CN"
AM_GLIB_GNU_GETTEXT
AM_GLIB_DEFINE_LOCALEDIR([GNOMELOCALEDIR])

AC_CONFIG_FILES([Makefile 
	   pixmaps/Makefile 
	   src/Makefile
	   po/Makefile.in
	   doc/Makefile
	   doc/C/Makefile
	 ])
AC_OUTPUT
